--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -6,10 +6,7 @@
   <title>Homepage - Techium</title>
   <meta name="description" content="Techium is a digital agency">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" sizes="image/png" href="./favicon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="manifest" href="site.webmanifest">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
 </head>
 <body>
 </body>
