--- a/html_advanced/5-index.html
+++ b/html_advanced/5-index.html
@@ -12,25 +12,25 @@
 <body>
     <main>
         <section id="section1">
-            <h2>Hero section</h2>
+            Hero section
         </section>
         <section id="section2">
-            <h2>Services section</h2>
+            Services section
         </section>
         <section id="section3">
-            <h2>Works section</h2>
+            Works section
         </section>
         <section id="section4">
-            <h2>About section</h2>
+            About section
         </section>
         <section id="section5">
-            <h2>Latest news section</h2>
+            Latest news section
         </section>
         <section id="section6">
-            <h2>Testimonials section</h2>
+            Testimonials section
         </section>
         <section id="section7">
-            <h2>Contact section</h2>
+            Contact section
         </section>
     </main>
 </body>
