--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -45,6 +45,15 @@
         </section>
         <section id="section6">
             Testimonials section
+            <article>
+                Testimonial 1
+            </article>
+            <article>
+                Testimonial 2
+            </article>
+            <article>
+                Testimonial 3
+            </article>
         </section>
         <section id="section7">
             Contact section
