--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
@@ -11,28 +9,28 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
 <body>
-    <div>
-        <header>
+    <header>
+        <div>
             <span>
                 Techium
             </span>
             <nav>
             </nav>
-        </header>
-      </div>
+        </div>    
+    </header>
     <main>
         <h1>
             Homepage
         </h1>
-        <div>
-            <section id="section1">
+        <section id="section1">
+            <div>
                 <h2>
                     We help you build your brand!
                 </h2>
-            </section>
-        </div>
-        <div>
-            <section id="section2">
+            <div/>
+        </section>
+        <section id="section2">
+            <div>
                 <h2>
                     Services
                 </h2>
@@ -56,11 +54,11 @@
                 </h3>
                 <h3>
                     Social Media
-                </h3>       
-            </section>
-        </div>
-        <div>
-            <section id="section3">
+                </h3> 
+            <div/>
+        </section>
+        <section id="section3">
+            <div>
                 <h2>
                     Works
                 </h2>
@@ -82,10 +80,10 @@
                         Personal Brand
                     </h3>
                 </article>
-            </section>
-        </div>
-        <div>
-            <section id="section4">
+            </div>
+        </section>
+        <section id="section4">
+            <div>
                 <h2>
                     About Us
                 </h2>
@@ -110,21 +108,21 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
                 </p>
-            </section>
-        </div>
-        <div>
-            <section id="section5">
-            <h2>
-                Latest news
-            </h2>
-            <article>
-                <p>
-                    Career
-                </p>
-                <h3>
-                    Hoc loco tenere se Triarius non potuit.
-                </h3>
-                <p>
+            </div>
+        </section>
+        <section id="section5">
+            <div>
+                <h2>
+                    Latest news
+                </h2>
+                <article>
+                    <p>
+                        Career
+                    </p>
+                    <h3>
+                        Hoc loco tenere se Triarius non potuit.
+                    </h3>
+                    <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?
                     </p>
                 </article>
@@ -150,10 +148,10 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.
                     </p>
                 </article>
-            </section>
-        </div>
-        <div>
-            <section id="section6">
+            </div>
+        </section>
+        <section id="section6">
+            <div>
                 <h2>
                     Testimonials
                 </h2>
@@ -169,10 +167,10 @@
                 <article>
                     Testimonial 3
                 </article>
+            </div>
         </section>
-        </div>
-        <div>
-            <section id="section7">
+        <section id="section7">
+            <div>
                 <h2>
                     Contact
                 </h2>
@@ -182,8 +180,11 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?
                 </p>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
+    <div>
+        <footer>Footer</footer>    
+    </div>
 </body>
 </html>
