--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -184,7 +184,9 @@
         </section>
     </main>
     <div>
-        <footer>Footer</footer>    
+        <footer>
+            <div>Footer</div>
+        </footer>    
     </div>
 </body>
 </html>
