--- a/html_advanced/22-index.html
+++ b/html_advanced/22-index.html
@@ -147,7 +147,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
         </div>
       </div>
-      <a href="contact.html" title="Get in touch">Contact us</a>
+      <a href="contact.html">Contact us</a>
     </section>
   </main>
   <br>
