--- a/html_advanced/26-styleguide.html
+++ b/html_advanced/26-styleguide.html
@@ -42,7 +42,8 @@
                   <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
                 </dl>
               </div>
-            </section>  
+            </section>
+            <section>
                 <header>
                     <h2>
                         Headings
