--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -141,10 +141,10 @@
         </header>
         <div>
           <article>
-            <bolckquote>
+            <blockquote>
               <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
               <cite>Yuri Y.</cite>
-            </bolckquote>
+            </blockquote>
           </article>
           <article>
             <blockquote>
