--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -103,8 +103,7 @@
               </header>
               <div>
                 <adress>
-                  320 Stewart Avenue, Unit 12<br>
-                  New York City NY 10001
+                  320 Stewart Avenue, Unit 12<br>New York City NY 10001
                 </adress>
               </div>
               <div>
