--- a/html_advanced/35-index.htm
+++ b/html_advanced/35-index.htm
@@ -16,7 +16,7 @@
     <header>
         <div>
             <div>
-                <img src="/logo-black.png" alt="Techium logo" width="160" height="40">
+                <img src="/logo.png" alt="Techium logo" width="160" height="40">
             </div>
         </div>
         <nav>
